# config-argument-parser

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: codecov.yml
args/: __init__.py  args.py
configargparser/: __init__.py  args.py  cap.py  gap.py  tap.py
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_templates/autosummary/: class.rst  module.rst
tests/: test_args.py  test_cap.py  test_gap.py  test_tap.py
