[metadata]
name = config-argument-parser
version = attr: args.__version__
url = https://github.com/yuanx749/config-argument-parser
author = Xiao Yuan
author_email = yuanx749@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT License
description = A package help automatically create command-line interface from configuration or code.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = cli

[options]
python_requires = >=3.7
packages = args

[options.extras_require]
dev =
    pre-commit
    black==21.6b0
    flake8==3.9.2
    isort==5.10.1
    pytest
    pytest-cov

[flake8]
ignore = E402, E501, W503
exclude = .venv
