[metadata]
name = config-argument-parser
version = attr: configargparser.__version__
url = https://github.com/yuanx749/config-argument-parser
author = Xiao Yuan
author_email = yuanx749@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT License
description = A package help automatically create command-line interface from configuration or code.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = CLI, option, argument, parameter, flag, configuration, parser, command, comment, dataclass, Python

[options]
python_requires = >=3.7
packages = configargparser

[options.extras_require]
dev =
    pre-commit
    black==22.1.0
    flake8==3.9.2
    isort==5.10.1
    pytest
    pytest-cov
doc = file: docs/requirements.txt

[flake8]
extend-ignore =
    E402
    E501
extend-exclude =
    .venv
    docs
