[metadata]
name = config-argument-parser
version = attr: configargparser.__version__
url = https://github.com/yuanx749/config-argument-parser
project_urls =
    Documentation=http://config-argument-parser.readthedocs.io/
    Source=https://github.com/yuanx749/config-argument-parser
author = Xiao Yuan
author_email = yuanx749@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT License
description = A package to help automatically create command-line interface from configuration or code.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = CLI, option, argument, parameter, flag, configuration, parser, command, comment, dataclass, Python

[options]
python_requires = >=3.8
packages = configargparser

[options.extras_require]
dev =
    pre-commit
    pytest
    pytest-cov
    ruff
